# BBC

./: .gitignore  BBC.cc  CMakeLists.txt  README.md
data_analyse/: concatinate.py  graph.C  langaus.C  photonsCount.py  print.py  wls_specrtum.C
data_analyse/combined/: CherenkovCount.root  PhotonsCount.root  PhotonsEnergy.root
data_analyse/data/: 00.root  01.root  02.root  10.root  11.root  12.root  20.root  21.root  22.root  30.root  31.root  cross_test.C  data_converter.py  full.root  graph.C  loss.C  output0.root  output1.root  output10.root  output2.root  output3.root  output4.root  output6.root  output7.root  output8.root  output9.root  output_27.04.2025_19:08:23.root  output_27.04.2025_19:17:32.root  output_27.04.2025_20:31:02.root  output_27.04.2025_20:39:41.root  output_27.04.2025_20:49:39.root  output_27.04.2025_20:58:05.root  res.txt  split.py  wl.C  wls.root
data_analyse/data/x11/: makedir.py
include/: Action.hh  ActionInitialization.hh  BBCConstruction.hh  BBCPhysics.hh  DetectorConstruction.hh  EventAction.hh  Generator.hh  GeneratorPythia.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
macros/: run.mac  vis.mac
models/: tile_1.stl  tile_1_shifter.stl  tile_2.stl  tile_3.stl
src/: Action.cc  ActionInitialization.cc  BBCConstruction.cc  BBCPhysics.cc  DetectorConstruction.cc  EventAction.cc  Generator.cc  GeneratorPythia.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
